<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/logoViewer"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:background="@drawable/lock"
        android:contentDescription="@string/login_description" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:hint="@string/login_UserName_Hint"
        android:ems="10"
        android:id="@+id/loginUserNameTxt"
        style="@style/Widget.AppCompat.EditText"
        android:textAlignment="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/userPasswordTxt"
        android:hint="@string/userPassword_Hint"
        style="@style/Widget.AppCompat.EditText"
        android:textAlignment="center" />

    <Button
        android:text="@string/loginBtn_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginBtn"
        android:onClick="Button_Click"
        style="@style/Widget.AppCompat.Button.Colored" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/registerBtn_Name"
            android:id="@+id/registerBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:onClick="Button_Click"
            style="@style/Widget.AppCompat.Button.Colored" />

        <Button
            android:text="@string/resetBtn_Name"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/resetBtn"
            android:gravity="center"
            android:layout_weight="1"
            android:onClick="Button_Click"
            style="@style/Widget.AppCompat.Button.Colored" />

    </LinearLayout>

</LinearLayout>
