<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.cut2016.loginsimulation.RegisterActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/userNameTxt"
        android:hint="@string/userName_Hint"
        style="@android:style/Widget.DeviceDefault.EditText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:gravity="center"
        android:ems="10"
        android:id="@+id/fullNameTxt"
        android:hint="@string/fullName_Hint"
        style="@android:style/Widget.DeviceDefault.EditText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:gravity="center"
        android:ems="10"
        android:id="@+id/passwordTxt"
        style="@android:style/Widget.DeviceDefault.EditText"
        android:hint="@string/password_Hint" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:gravity="center"
        android:ems="10"
        android:id="@+id/confirmPasswordTxt"
        android:hint="@string/confirm_password_Hint"
        style="@android:style/Widget.DeviceDefault.EditText" />

    <Button
        android:text="@string/registerSubmitBtn_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registerBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:onClick="Register_Click" />
</LinearLayout>
